[gd_scene load_steps=4 format=3 uid="uid://cb754d6wslvuh"]

[ext_resource type="Script" path="res://player/player.gd" id="1_6ae1p"]
[ext_resource type="PackedScene" uid="uid://w2r7kee7l6lg" path="res://ASSETS/3D_MODELS/Player/player_imported.tscn" id="1_lrrp0"]
[ext_resource type="PackedScene" uid="uid://b0iyoqr83nnfp" path="res://player/camera_3d.tscn" id="3_gke5l"]

[node name="Player" type="Node3D"]

[node name="scripts" type="Node" parent="."]

[node name="head_move" type="Node" parent="scripts"]
script = ExtResource("1_6ae1p")

[node name="player" parent="." instance=ExtResource("1_lrrp0")]

[node name="Skeleton3D" parent="player/player" index="0"]
bones/1/position = Vector3(-5.16193e-18, 0.0978698, 1.60934)
bones/1/rotation = Quaternion(0.707107, 2.00972e-14, 2.00972e-14, 0.707107)
bones/5/position = Vector3(0, 0.0995221, 0.873425)
bones/5/rotation = Quaternion(0.790455, 7.30181e-08, 9.42297e-08, 0.61252)
bones/7/rotation = Quaternion(-0.162099, -2.93118e-15, -3.86473e-08, 0.986775)
bones/8/rotation = Quaternion(0.105394, -2.62784e-14, 2.5128e-08, 0.994431)
bones/9/rotation = Quaternion(-0.0347976, -2.38274e-07, 2.91229e-16, 0.999394)
bones/11/rotation = Quaternion(0.0175392, -1.19191e-07, 2.09084e-09, 0.999846)
bones/12/position = Vector3(0.349826, 0.119991, 1.2623)
bones/12/rotation = Quaternion(-0.189187, 0.715088, -0.0907418, 0.666801)
bones/12/scale = Vector3(1, 19.662, 1)
bones/13/position = Vector3(-0.349826, 0.119991, 1.2623)
bones/13/rotation = Quaternion(0.189186, 0.715088, -0.0907415, -0.666801)
bones/13/scale = Vector3(1, 19.662, 1)
bones/14/position = Vector3(0.144147, 0.0321589, 0.507791)
bones/14/rotation = Quaternion(0.943881, 0.122406, -0.302269, 0.0523344)
bones/14/scale = Vector3(1, 19.9784, 1)
bones/15/position = Vector3(-0.144147, 0.0321589, 0.507791)
bones/15/rotation = Quaternion(0.943881, -0.122406, 0.302269, 0.0523344)
bones/15/scale = Vector3(1, 19.9784, 1)
bones/17/position = Vector3(0, 0, 0)
bones/17/rotation = Quaternion(0, 0, 0, 1)
bones/19/rotation = Quaternion(0, 0, 0, 1)
bones/30/rotation = Quaternion(0.975748, 0.0419509, -0.137341, 0.165206)
bones/30/scale = Vector3(1, 1, 1)
bones/31/rotation = Quaternion(0.0725651, -1.5244e-07, 3.0348e-08, 0.997364)
bones/31/scale = Vector3(1, 1, 1)
bones/32/rotation = Quaternion(-0.474607, 0.00931772, 0.0630794, 0.877885)
bones/32/scale = Vector3(1, 1, 1)
bones/33/position = Vector3(-1.22891e-08, 0.118455, -9.31323e-10)
bones/37/scale = Vector3(1, 1, 1)
bones/39/rotation = Quaternion(4.65667e-10, 0.00496175, -3.30624e-08, 0.999988)
bones/39/scale = Vector3(1, 1, 1)
bones/41/scale = Vector3(1, 1, 1)
bones/42/rotation = Quaternion(1.86265e-08, -1.11992e-07, 3.63216e-08, 1)
bones/42/scale = Vector3(1, 1, 1)
bones/44/rotation = Quaternion(0.975748, -0.0419509, 0.137341, 0.165206)
bones/44/scale = Vector3(1, 1, 1)
bones/45/rotation = Quaternion(0.072565, 3.33828e-08, -4.06196e-08, 0.997364)
bones/45/scale = Vector3(1, 1, 1)
bones/46/rotation = Quaternion(-0.474607, -0.00931779, -0.0630793, 0.877885)
bones/46/scale = Vector3(1, 1, 1)
bones/47/position = Vector3(1.7965e-08, 0.118455, 3.72529e-09)
bones/51/scale = Vector3(1, 1, 1)
bones/53/rotation = Quaternion(-1.35043e-08, -0.00496176, 2.0955e-08, 0.999988)
bones/53/scale = Vector3(1, 1, 1)
bones/55/scale = Vector3(1, 1, 1)
bones/56/rotation = Quaternion(3.72529e-08, 1.00117e-08, -2.98023e-08, 1)
bones/56/scale = Vector3(1, 1, 1)
bones/66/rotation = Quaternion(-0.702898, -0.13919, 0.062742, 0.694711)
bones/67/rotation = Quaternion(-0.036248, 0.00986988, 0.000357976, 0.999294)
bones/67/scale = Vector3(1, 1, 1)
bones/68/rotation = Quaternion(0.0725651, -1.28746e-07, 3.82852e-08, 0.997364)
bones/68/scale = Vector3(1, 1, 1)
bones/69/rotation = Quaternion(0.975748, 0.0419509, -0.13734, 0.165206)
bones/71/rotation = Quaternion(0.975748, 0.041951, -0.13734, 0.165206)
bones/71/scale = Vector3(1, 1, 0.999998)
bones/72/rotation = Quaternion(-1.21072e-08, -3.18978e-08, -9.31323e-09, 1)
bones/73/rotation = Quaternion(0.0725652, -1.4462e-07, 5.04243e-08, 0.997364)
bones/73/scale = Vector3(1, 1, 1)
bones/74/rotation = Quaternion(2.32831e-08, -5.3551e-09, -2.7474e-08, 1)
bones/75/rotation = Quaternion(-0.474607, 0.00931745, 0.0630795, 0.877885)
bones/75/scale = Vector3(1, 1, 1)
bones/76/rotation = Quaternion(0.00320223, 0.961249, -0.275663, 0.000794408)
bones/76/scale = Vector3(1, 1, 1)
bones/85/rotation = Quaternion(-0.702898, 0.13919, -0.062742, 0.694711)
bones/86/rotation = Quaternion(-0.036248, -0.0098699, -0.000357963, 0.999294)
bones/86/scale = Vector3(1, 1, 1)
bones/87/rotation = Quaternion(0.0725651, 3.08149e-08, -5.1825e-08, 0.997364)
bones/87/scale = Vector3(1, 1, 1)
bones/88/rotation = Quaternion(0.975748, -0.0419509, 0.137341, 0.165206)
bones/90/rotation = Quaternion(0.975748, -0.041951, 0.13734, 0.165206)
bones/90/scale = Vector3(1, 1, 0.999998)
bones/91/rotation = Quaternion(-2.51457e-08, 6.75209e-09, 2.28174e-08, 1)
bones/92/rotation = Quaternion(0.0725652, -8.0072e-08, -3.59507e-08, 0.997364)
bones/92/scale = Vector3(1, 1, 1)
bones/93/rotation = Quaternion(5.02914e-08, 1.53435e-07, -6.47269e-08, 1)
bones/94/rotation = Quaternion(-0.474607, -0.00931756, -0.0630794, 0.877885)
bones/94/scale = Vector3(1, 1, 1)
bones/95/rotation = Quaternion(-0.00320227, 0.961249, -0.275664, -0.000794523)
bones/95/scale = Vector3(1, 1, 1)
bones/99/rotation = Quaternion(0, 0, 0, 1)
bones/101/rotation = Quaternion(0.162098, 1.53014e-14, 3.86473e-08, 0.986775)
bones/104/rotation = Quaternion(-0.617928, -9.37265e-08, -7.36627e-08, 0.786235)
bones/106/rotation = Quaternion(-0.0347976, -2.38274e-07, -2.37331e-15, 0.999394)
bones/108/rotation = Quaternion(0.0175392, -1.19191e-07, 2.09084e-09, 0.999846)
bones/311/rotation = Quaternion(0.744974, -0.413762, -0.512356, -0.10633)
bones/324/rotation = Quaternion(0.744974, 0.413762, 0.512356, -0.10633)
bones/367/rotation = Quaternion(-0.75977, -0.255442, -0.273447, 0.531719)
bones/388/rotation = Quaternion(-0.639302, 2.44364e-08, 2.03161e-08, 0.768956)
bones/388/scale = Vector3(1, 1, 1)
bones/401/rotation = Quaternion(-0.697351, -8.54408e-08, -8.31307e-08, 0.71673)
bones/403/rotation = Quaternion(-0.68523, 8.68233e-08, 8.16858e-08, 0.728326)
bones/412/rotation = Quaternion(-0.220735, 0.592254, -0.399936, 0.663748)
bones/412/scale = Vector3(1, 1, 1)
bones/413/rotation = Quaternion(0.247467, -2.06662e-08, -3.7007e-08, 0.968896)
bones/413/scale = Vector3(1, 1, 1)
bones/414/rotation = Quaternion(0.0147126, 0.000537799, -0.0365353, 0.999224)
bones/414/scale = Vector3(1, 1, 1)
bones/417/scale = Vector3(1, 1, 1)
bones/419/rotation = Quaternion(-4.33065e-08, 0.000268829, 1.11759e-08, 1)
bones/419/scale = Vector3(1, 1, 1)
bones/421/scale = Vector3(1, 1, 1)
bones/422/rotation = Quaternion(3.63216e-08, -1.30385e-08, 3.30619e-08, 1)
bones/422/scale = Vector3(1, 1, 1)
bones/431/rotation = Quaternion(-0.18946, -0.55113, 0.743315, -0.328396)
bones/432/rotation = Quaternion(-0.12273, -0.0485428, -0.00601038, 0.991234)
bones/432/scale = Vector3(1, 1, 1)
bones/433/rotation = Quaternion(0.247467, -3.98906e-08, 9.61221e-10, 0.968896)
bones/433/scale = Vector3(1, 1, 1)
bones/434/rotation = Quaternion(-0.220735, 0.592255, -0.399936, 0.663748)
bones/436/rotation = Quaternion(-0.220735, 0.592254, -0.399936, 0.663748)
bones/436/scale = Vector3(1, 1, 1)
bones/437/rotation = Quaternion(8.47504e-08, 2.75671e-07, 2.26777e-07, 1)
bones/438/rotation = Quaternion(0.247467, -2.27809e-07, -2.01856e-07, 0.968896)
bones/438/scale = Vector3(1, 1, 1)
bones/439/rotation = Quaternion(-5.6345e-08, 3.72529e-09, 4.84288e-08, 1)
bones/440/rotation = Quaternion(0.0147128, 0.000538349, -0.036535, 0.999224)
bones/440/scale = Vector3(1, 1, 1)
bones/442/rotation = Quaternion(-0.0704856, 0.152482, -0.0695213, 0.983335)
bones/442/scale = Vector3(1, 1, 1)
bones/443/rotation = Quaternion(0.125496, 0.00131479, -0.0103937, 0.992039)
bones/443/scale = Vector3(1, 1, 1)
bones/445/rotation = Quaternion(0.0222401, 0.774161, 0.200308, 0.600048)
bones/446/rotation = Quaternion(0.0873562, 0.000465357, -0.00531306, 0.996163)
bones/448/rotation = Quaternion(-0.0704856, 0.152482, -0.0695213, 0.983335)
bones/448/scale = Vector3(1, 1, 1)
bones/449/rotation = Quaternion(0.125496, 0.00131479, -0.0103937, 0.992039)
bones/449/scale = Vector3(1, 1, 1)
bones/451/rotation = Quaternion(-0.0704856, 0.152482, -0.0695213, 0.983335)
bones/452/rotation = Quaternion(0.0222401, 0.774161, 0.200308, 0.600048)
bones/453/rotation = Quaternion(0.0873562, 0.000465357, -0.00531306, 0.996163)
bones/455/rotation = Quaternion(0.0222401, 0.77416, 0.200308, 0.600048)
bones/457/rotation = Quaternion(-0.070485, 0.152481, -0.069521, 0.983335)
bones/460/position = Vector3(1.86265e-08, -7.45058e-09, -8.75443e-08)
bones/460/rotation = Quaternion(-1.32248e-06, 1.34949e-06, 7.9535e-07, 1)
bones/466/rotation = Quaternion(-0.0704856, 0.152482, -0.0695213, 0.983335)
bones/466/scale = Vector3(1, 1, 1)
bones/467/rotation = Quaternion(0.0222396, 0.774162, 0.200307, 0.600047)
bones/470/rotation = Quaternion(8.08388e-07, -1.84029e-06, 1.72108e-06, 1)
bones/476/rotation = Quaternion(0.0222401, 0.774161, 0.200308, 0.600048)
bones/478/rotation = Quaternion(0.215396, 0.0945038, -0.0302739, 0.971472)
bones/478/scale = Vector3(1, 1, 1)
bones/479/rotation = Quaternion(0.119225, -0.00019603, 0.00163483, 0.992866)
bones/479/scale = Vector3(1, 1, 1)
bones/481/rotation = Quaternion(0.215396, 0.0945038, -0.0302739, 0.971472)
bones/481/scale = Vector3(1, 1, 1)
bones/482/rotation = Quaternion(0.119225, -0.00019603, 0.00163483, 0.992866)
bones/482/scale = Vector3(1, 1, 1)
bones/484/rotation = Quaternion(0.215396, 0.0945037, -0.0302739, 0.971472)
bones/486/rotation = Quaternion(0.215396, 0.0945045, -0.0302741, 0.971472)
bones/489/position = Vector3(1.49012e-08, -3.72529e-08, -4.65661e-08)
bones/489/rotation = Quaternion(6.53788e-07, -7.3202e-07, -1.49012e-08, 1)
bones/495/rotation = Quaternion(0.215396, 0.0945038, -0.0302739, 0.971472)
bones/495/scale = Vector3(1, 1, 1)
bones/497/rotation = Quaternion(0.281956, 0.118895, 0.0102751, 0.951977)
bones/500/rotation = Quaternion(0.281956, 0.118895, 0.0102751, 0.951977)
bones/503/rotation = Quaternion(0.281955, 0.118895, 0.0102751, 0.951977)
bones/505/rotation = Quaternion(0.281955, 0.118895, 0.0102752, 0.951977)
bones/511/rotation = Quaternion(-0.50246, 1.07717e-09, 0.864601, 7.00161e-09)
bones/514/rotation = Quaternion(0.281956, 0.118895, 0.0102751, 0.951977)
bones/518/rotation = Quaternion(0.0615063, 0.00113166, 0.0683834, 0.995761)
bones/521/rotation = Quaternion(0.0615063, 0.00113166, 0.0683834, 0.995761)
bones/529/rotation = Quaternion(1.25635e-06, -1.97161e-06, -6.30971e-07, 1)
bones/536/rotation = Quaternion(-0.220735, -0.592254, 0.399936, 0.663749)
bones/536/scale = Vector3(1, 1, 1)
bones/537/rotation = Quaternion(0.247467, 6.05569e-08, 1.05734e-07, 0.968896)
bones/538/rotation = Quaternion(0.0147126, -0.000537798, 0.0365354, 0.999224)
bones/538/scale = Vector3(1, 1, 1)
bones/541/scale = Vector3(1, 1, 1)
bones/543/rotation = Quaternion(8.84757e-09, -0.000268813, 4.09782e-08, 1)
bones/543/scale = Vector3(1, 1, 1)
bones/545/scale = Vector3(1, 1, 1)
bones/546/rotation = Quaternion(8.28877e-08, -1.67638e-08, -2.98023e-08, 1)
bones/546/scale = Vector3(1, 1, 1)
bones/555/rotation = Quaternion(0.18946, -0.55113, 0.743315, 0.328396)
bones/556/rotation = Quaternion(-0.12273, 0.0485427, 0.00601039, 0.991234)
bones/556/scale = Vector3(1, 1, 1)
bones/557/rotation = Quaternion(0.247467, 1.04773e-07, 8.31455e-08, 0.968896)
bones/558/rotation = Quaternion(-0.220735, -0.592254, 0.399936, 0.663748)
bones/560/rotation = Quaternion(-0.220735, -0.592254, 0.399936, 0.663749)
bones/560/scale = Vector3(1, 1, 1)
bones/561/rotation = Quaternion(1.71363e-07, -3.40864e-07, -2.72878e-07, 1)
bones/562/rotation = Quaternion(0.247467, 3.95061e-07, 3.25373e-07, 0.968896)
bones/562/scale = Vector3(1, 1, 1)
bones/563/rotation = Quaternion(-4.70318e-08, -6.70552e-08, -8.19564e-08, 1)
bones/564/rotation = Quaternion(0.0147126, -0.000537826, 0.0365353, 0.999224)
bones/564/scale = Vector3(1, 1, 1)
bones/669/position = Vector3(0, -3.72529e-09, 0)
bones/669/rotation = Quaternion(-0.18585, -0.430052, 0.831093, -0.299666)
bones/671/position = Vector3(0.276286, 1.07442, -0.568417)
bones/671/rotation = Quaternion(-0.707107, 0, 0, 0.707107)
bones/674/position = Vector3(0, -3.72529e-09, 0)
bones/676/position = Vector3(-0.276286, 1.07442, -0.568417)
bones/676/rotation = Quaternion(-0.707107, 0, 0, 0.707107)
bones/690/position = Vector3(0.367539, 0.528876, 0.788038)
bones/690/rotation = Quaternion(-0.707107, 0, 0, 0.707107)
bones/704/position = Vector3(-0.367539, 0.528876, 0.788038)
bones/704/rotation = Quaternion(-0.707107, 0, 0, 0.707107)

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="player/player/Skeleton3D" index="1"]
transform = Transform3D(1, -1.51671e-13, 2.38419e-07, -1.22867e-12, 1, 4.76837e-07, -2.38421e-07, 1.19209e-07, 1, 3.37729e-14, 1.68046, 0.0475807)
bone_name = "nose.001"
bone_idx = 380

[node name="Camera3D2" parent="player/player/Skeleton3D/BoneAttachment3D" instance=ExtResource("3_gke5l")]
transform = Transform3D(-1, -1.059e-12, -8.74251e-08, -2.49902e-12, 1, 3.57633e-07, 8.74227e-08, -2.38413e-07, -0.999999, 0, 0, 0)

[node name="head_rotation" type="Marker3D" parent="player"]

[editable path="player"]
[editable path="player/player/Skeleton3D/BoneAttachment3D/Camera3D2"]
