[gd_scene load_steps=3 format=3 uid="uid://btqmhs7q6mfr1"]

[ext_resource type="PackedScene" uid="uid://d37aibjhfk66u" path="res://ASSETS/3D_MODELS/Player/player.glb" id="1_mirc0"]
[ext_resource type="Script" path="res://player/player.gd" id="2_3ipnw"]

[node name="player" instance=ExtResource("1_mirc0")]
script = ExtResource("2_3ipnw")

[node name="SkeletonIK3D" type="SkeletonIK3D" parent="player/Skeleton3D" index="1"]
process_priority = 1
root_bone = &"ORG-spine.005"
tip_bone = &"ORG-spine.006"
target_node = NodePath("../Head_rotation/Head_rotation_y")

[node name="SkeletonIK3D2" type="SkeletonIK3D" parent="player/Skeleton3D" index="2"]
process_priority = 1
root_bone = &"DEF-spine.005"
tip_bone = &"DEF-spine.006"
target_node = NodePath("../Head_rotation/Head_rotation_y")

[node name="Head_rotation" type="Marker3D" parent="player/Skeleton3D" index="3"]
transform = Transform3D(1, 0, 0, 0, 0.985712, -0.168438, 0, 0.168438, 0.985712, 0, 1.694, -0.093)

[node name="Head_rotation_y" type="Marker3D" parent="player/Skeleton3D/Head_rotation" index="0"]

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="player/Skeleton3D" index="4"]
transform = Transform3D(0.999993, 7.86239e-15, 1.1921e-06, 4.82867e-07, -0.914284, -0.405054, 1.08992e-06, 0.405054, -0.914284, -4.75843e-15, 1.68708, -0.0466079)
bone_name = "jaw_master"
bone_idx = 262

[node name="head_position" type="Marker3D" parent="player/Skeleton3D/BoneAttachment3D" index="0"]

[node name="Camera3D" type="Camera3D" parent="player/Skeleton3D/BoneAttachment3D/head_position" index="0"]
transform = Transform3D(-1.00001, 5.7535e-07, -2.24098e-06, 7.35597e-07, -0.839265, -0.543726, -2.19361e-06, -0.543722, 0.839271, 0, 0, -0.08)
